# M5CardputerZero-Launcher

./: .gitignore  .gitmodules  README.md  README_ZH.md
.github/workflows/: launcher-build.yml
docs/: macos-docker-build.md
projects/APPLaunch/: SConstruct  config_defaults.mk  darwin_config_defaults.mk  linux_x86_cross_cp0_config_defaults.mk  linux_x86_sdl2_config_defaults.mk
projects/APPLaunch/main/: SConstruct
projects/APPLaunch/main/hal/: battey.c  hal_screenshot.h  keyboard_input.c
projects/APPLaunch/main/hal/linux/: hal_screenshot_linux.cpp
projects/APPLaunch/main/hal/sdl/: hal_screenshot_sdl.cpp  hal_settings_sdl.cpp
projects/APPLaunch/main/include/: battery.h
projects/APPLaunch/main/src/: main.cpp
projects/APPLaunch/main/ui/: ui.c  ui.h  ui_event_fun.h  ui_events.c  ui_events.h  ui_events_weak.c  ui_global_hint.cpp  ui_obj.h
projects/APPLaunch/main/ui/Animation/: Animation_lable.h  Animation_panel.h
projects/APPLaunch/main/ui/components/: page_app.h  ui_app_IpPanel.hpp  ui_app_camera.hpp  ui_app_console.hpp  ui_app_email.hpp  ui_app_file.hpp  ui_app_game.hpp  ui_app_gpio.hpp  ui_app_hack.hpp  ui_app_hikepod.hpp  ui_app_launch.cpp  ui_app_mesh.hpp  ui_app_midi.hpp  ui_app_music.hpp  ui_app_page.hpp  ui_app_rec.hpp  ui_app_setup.hpp  ui_app_ssh.hpp  ui_launch_page.hpp
projects/APPLaunch/main/ui/components/page_app/: ui_app_AiCli.hpp  ui_app_camera.hpp  ui_app_lora.hpp  ui_app_setup.hpp  ui_app_stock.hpp
projects/APPLaunch/main/ui/screens/: ui_Screen1.c
projects/APPLaunch/tools/: llm_pack.py
projects/CardputerZero-Emulator/: CMakeLists.txt
projects/CardputerZero-Emulator/src/compat/: thpool.h
